<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fontFamily="@font/cabin"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:id="@+id/linear_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_purple"
        android:padding="16dp">

        <ImageView
            android:id="@+id/image_infinite"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:src="@drawable/ic_all"
            app:tint="@color/purple"/>

        <ImageView
            android:id="@+id/image_smile"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:src="@drawable/ic_happy"
            app:tint="@color/purple" />

        <ImageView
            android:id="@+id/image_sun"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            app:tint="@color/purple"
            android:src="@drawable/ic_sun" />


    </LinearLayout>

    <TextView
        android:id="@+id/text_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_menu"
        android:layout_centerInParent="true"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:fontFamily="@font/cabin"
        android:text="@string/hello_user"
        android:textSize="18sp" />


    <TextView
        android:id="@+id/text_phrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:textColor="@color/black"
        android:padding="16dp"
        android:fontFamily="@font/cabin"
        android:text="@string/motivacional_phrases"
        android:textSize="22sp" />


    <View
        android:id="@+id/view_separation"
        android:layout_width="160dp"
        android:layout_height="3dp"
        android:layout_below="@id/text_phrase"
        android:layout_centerHorizontal="true"
        android:elevation="5dp"
        android:layout_marginTop="16dp"
        android:background="@color/dark_purple" />

    <Button
        android:id="@+id/button_new_phrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/dark_purple"
        android:fontFamily="@font/cabin"
        android:text="@string/button_new_phrase"
        android:textAllCaps="true" />

</RelativeLayout>